fix: interface shift during modal opening (caused by scrollbar width) fixed

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -2,6 +2,8 @@ html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+
+  /* overflow-y: scroll; */
 }
 
 *,
@@ -65,7 +67,14 @@ body {
 }
 
 body.modal-open {
-  overflow: hidden;
+  height: 100vh;
+  overflow-y: hidden;
+}
+
+@media screen and (min-width: 1200px) {
+  body.modal-open {
+    padding-right: 17px;
+  }
 }
 
 .container {
